Added basic routing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
+    "emitDecoratorMetadata": true,
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
