--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@ngrx/entity": "^10.1.0",
+    "@ngrx/store": "^10.1.0",
+    "@ngrx/store-devtools": "^10.1.0",
     "@types/chart.js": "^2.9.28",
     "angular-bootstrap-md": "^10.1.1",
+    "angular2-uuid": "^1.1.1",
     "animate.css": "^4.1.1",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
