--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ngrx/entity": "^10.1.0",
     "@ngrx/store": "^10.1.0",
-    "@ngrx/store-devtools": "^10.1.0",
     "@types/chart.js": "^2.9.28",
     "angular-bootstrap-md": "^10.1.1",
     "angular2-uuid": "^1.1.1",
     "animate.css": "^4.1.1",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "ngrx-store-localstorage": "^10.1.1",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -39,6 +39,7 @@
     "@angular-devkit/build-angular": "~0.1100.4",
     "@angular/cli": "~11.0.4",
     "@angular/compiler-cli": "~11.0.4",
+    "@ngrx/store-devtools": "^10.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
