--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@ngrx/entity": "^10.1.0",
     "@ngrx/store": "^10.1.0",
     "@types/chart.js": "^2.9.28",
+    "@types/file-saver": "^2.0.1",
     "angular-bootstrap-md": "^10.1.1",
     "angular2-uuid": "^1.1.1",
     "animate.css": "^4.1.1",
     "chart.js": "^2.5.0",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
+    "json-2-csv": "^3.8.0",
     "ngrx-store-localstorage": "^10.1.1",
     "ngx-toastr": "^13.2.0",
     "rxjs": "~6.6.0",
