--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "generateDoc": "./node_modules/.bin/compodoc -p tsconfig.json -n \"Angular Diary\"",
+    "serveDoc": "./node_modules/.bin/compodoc -s"
   },
   "private": true,
   "dependencies": {
@@ -42,6 +44,7 @@
     "@angular-devkit/build-angular": "~0.1100.4",
     "@angular/cli": "~11.0.4",
     "@angular/compiler-cli": "~11.0.4",
+    "@compodoc/compodoc": "^1.1.11",
     "@ngrx/store-devtools": "^10.1.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
